Add --format param support
